# tk23_vision

./: .gitignore  arm.zsh  bringup.zsh  frames_2024-01-25_13.55.45.gv  frames_2024-01-25_14.02.35.gv  navigation.zsh  receptionist.zsh  vision.zsh
install/: local_setup.sh  setup.sh
install/audio_capture/lib/audio_capture/: audio_capture_node
install/audio_capture/share/audio_capture/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/audio_common/share/audio_common/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/audio_common_msgs/share/audio_common_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/audio_play/share/audio_play/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/azure_kinect_ros_driver/lib/azure_kinect_ros_driver/: node
install/azure_kinect_ros_driver/share/azure_kinect_ros_driver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/body_track/lib/body_track/: body_track
install/body_track/share/body_track/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/deepsort_body_track/lib/deepsort_body_track/: deepsort_body_track
install/deepsort_body_track/share/deepsort_body_track/: package.bash  package.dsv  package.ps1  (+3 more)
install/robocup_tasks/share/robocup_tasks/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/face_recognition_arcface/: receptionist_face_task.py
(+329 files in other folders)
