<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocup_tasks</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cdsfcesf@gmail.com">a</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>tf2_ros_py</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tinker_vision_msgs</depend>
  <depend>audio_common_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
